fix: Minor fir to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ poetry.toml
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm+all,django,visualstudiocode
+/.idea/codeStyles/codeStyleConfig.xml
